--- a/public/Certifications/index.html
+++ b/public/Certifications/index.html
@@ -231,7 +231,8 @@ Ultimate AWS Certified Solutions Architect (Stephane￼
 <p>Ultimate AWS Certified Solutions Architect (Stephane<br>￼<br><img src="/images/pasted-4.png" alt="upload successful"></p>
 <p>￼My test scores were not great, so I took th<br><img src="/images/pasted-5.png" alt="upload successful"></p>
 <p>I then started studing content for AWS Certified Solutions Architect on Udemy.<br>￼<br><img src="/images/pasted-3.png" alt="upload successful"></p>
-<p>ere</p>
+<p>After taking this course, I was able to pass the AWS Certified Solutions Architect exam</p>
+<p><img src="/images/pasted-6.png" alt="upload successful"></p>
 
 
                 
